css: selection text simplified

--- a/app/main.css
+++ b/app/main.css
@@ -7,12 +7,8 @@
   text-rendering: geometricPrecision;
 }
 
+::selection,
 ::-moz-selection {
-  @apply bg-zinc-600 text-white;
-  -webkit-text-fill-color: white;
-}
-
-::selection {
   @apply bg-zinc-600 text-white;
   -webkit-text-fill-color: white;
 }
